feat(comapies): add more spec to reach minimum coverage
